[package]
name = "distill_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
headless_chrome = { version = "1.0", default-features = false } # default features pull in openssl which might be tricky, try basic first. actually default is fine usually.
anyhow = "1.0"
html2md = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace", "cors"] }
url = "2.5.7"
readability = "0.3.0"
